start to match style guide

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
 
     <div id="content">
 
-        <byu-person-lookup id="lookup" context="admin">
+        <byu-person-lookup id="lookup" context="directory">
             <byu-personsv2-datasource></byu-personsv2-datasource>
         </byu-person-lookup>
 
