use cdn for demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,8 +13,8 @@
         #content { flex: 1; padding: 0.5rem; }
     </style>
 
-    <script type="module" src="../dist/byu-person-lookup-bundle.js"></script>
-    <script type="module" src="../dist/byu-personsv2-datasource-bundle.js"></script>
+    <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-person-lookup-bundle.min.js"></script>
+    <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-personsv2-datasource-bundle.min.js"></script>
 </head>
 <body>
     <byu-header>
