Fix for unauthorized addresses.

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,9 @@
     </style>
 
     <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-person-lookup-bundle.min.js"></script>
-    <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-personsv2-datasource-bundle.min.js"></script>
+    <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-personsv3-datasource-bundle.min.js"></script>
+    <!--<script type="module" src="../dist/byu-person-lookup-bundle.js"></script> -->
+    <!--<script type="module" src="../dist/byu-personsv3-datasource-bundle.js"></script>
 </head>
 <body>
     <byu-header>
@@ -24,7 +26,7 @@
     <div id="content">
 
         <byu-person-lookup id="lookup" context="directory">
-            <byu-personsv2-datasource></byu-personsv2-datasource>
+            <byu-personsv3-datasource></byu-personsv3-datasource>
         </byu-person-lookup>
 
         <p id="selection"></p>
