Update - fix unterminated comment

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
     <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-person-lookup-bundle.min.js"></script>
     <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-personsv3-datasource-bundle.min.js"></script>
     <!--<script type="module" src="../dist/byu-person-lookup-bundle.js"></script> -->
-    <!--<script type="module" src="../dist/byu-personsv3-datasource-bundle.js"></script>
+    <!--<script type="module" src="../dist/byu-personsv3-datasource-bundle.js"></script> -->
 </head>
 <body>
     <byu-header>
