Include both personsv2 and personsv3 lookup boxes.

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,7 @@
     </style>
 
     <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-person-lookup-bundle.min.js"></script>
+    <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-personsv2-datasource-bundle.min.js"></script>
     <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-personsv3-datasource-bundle.min.js"></script>
     <!--<script type="module" src="../dist/byu-person-lookup-bundle.js"></script> -->
     <!--<script type="module" src="../dist/byu-personsv3-datasource-bundle.js"></script> -->
@@ -25,8 +26,14 @@
 
     <div id="content">
 
+        <h2>PersonsV3 Lookup</h2>
         <byu-person-lookup id="lookup" context="directory">
             <byu-personsv3-datasource></byu-personsv3-datasource>
+        </byu-person-lookup>
+
+        <h2>PersonsV2 Lookup</h2>
+        <byu-person-lookup id="lookup" context="directory">
+            <byu-personsv2-datasource></byu-personsv2-datasource>
         </byu-person-lookup>
 
         <p id="selection"></p>
