remove link to old fonts css

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link type="text/css" rel="stylesheet" href="//cloud.typography.com/75214/6517752/css/fonts.css" media="all" />
     <link rel="stylesheet" href="https://cdn.byu.edu/byu-theme-components/latest/byu-theme-components.min.css" />
     <script async src="https://cdn.byu.edu/byu-theme-components/latest/byu-theme-components.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +15,11 @@
     <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-person-lookup-bundle.min.js"></script>
     <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-personsv2-datasource-bundle.min.js"></script>
     <script type="module" src="https://cdn.byu.edu/byu-person-lookup/latest/byu-personsv3-datasource-bundle.min.js"></script>
-    <!--<script type="module" src="../dist/byu-person-lookup-bundle.js"></script> -->
-    <!--<script type="module" src="../dist/byu-personsv3-datasource-bundle.js"></script> -->
+    <!--
+    <script type="module" src="../dist/byu-person-lookup-bundle.js"></script>
+    <script type="module" src="../dist/byu-personsv2-datasource-bundle.js"></script>
+    <script type="module" src="../dist/byu-personsv3-datasource-bundle.js"></script>
+    -->
 </head>
 <body>
     <byu-header>
