persons v4 add--so far just copied of v3

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,6 +29,11 @@
 
     <div id="content">
 
+<!--        <h2>PersonsV4 Lookup (not in production until March)</h2>-->
+<!--        <byu-person-lookup id="lookup-3" context="directory">-->
+<!--            <byu-personsv4-datasource></byu-personsv4-datasource>-->
+<!--        </byu-person-lookup>-->
+
         <h2>PersonsV3 Lookup</h2>
         <byu-person-lookup id="lookup-3" context="directory">
             <byu-personsv3-datasource></byu-personsv3-datasource>
